<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/img_user"
        app:drawableStartCompat="@drawable/ic_person_grey_24dp"
        app:drawableRightCompat="@drawable/ic_person_grey_24dp" />

    <TextView
        android:id="@+id/tv_name_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:drawableStartCompat="@drawable/ic_perm_identity_grey_24dp"
        app:drawableRightCompat="@drawable/ic_perm_identity_grey_24dp" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/company"
        app:layout_constraintStart_toStartOf="@+id/tv_name_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_user"
        app:drawableStartCompat="@drawable/ic_home_work_grey_24dp"
        app:drawableRightCompat="@drawable/ic_home_work_grey_24dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/location"
        app:drawableRightCompat="@drawable/ic_location_grey_24dp"
        app:drawableStartCompat="@drawable/ic_location_grey_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_company"
        app:layout_constraintStart_toEndOf="@+id/tv_company"
        app:layout_constraintTop_toTopOf="@+id/tv_company"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="105dp" />
</androidx.constraintlayout.widget.ConstraintLayout>