<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        android:textStyle="italic"
        app:drawableRightCompat="@drawable/ic_person_grey_24dp"
        app:drawableStartCompat="@drawable/ic_person_grey_24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableRightCompat="@drawable/ic_perm_identity_grey_24dp"
        app:drawableStartCompat="@drawable/ic_perm_identity_grey_24dp"
        app:layout_constraintEnd_toEndOf="@+id/img_detail_user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_detail_user"
        app:layout_constraintTop_toBottomOf="@+id/img_detail_user" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_username"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
        app:drawableStartCompat="@drawable/ic_home_work_grey_24dp"
        app:drawableRightCompat="@drawable/ic_home_work_grey_24dp"/>

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_company"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_company"
        app:drawableStartCompat="@drawable/ic_location_grey_24dp"
        app:drawableRightCompat="@drawable/ic_location_grey_24dp"/>

    <TextView
        android:id="@+id/tv_detail_repos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/repository"
        app:drawableStartCompat="@drawable/ic_topic_grey_24dp"
        app:drawableRightCompat="@drawable/ic_topic_grey_24dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_location"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_location" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="?actionBarSize"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_repos"
        app:tabTextColor="@color/black" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_repos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_location"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_favorite_border_24" />


</androidx.constraintlayout.widget.ConstraintLayout>